--- a/miniWebProject/appsettings.json
+++ b/miniWebProject/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=TAREK-MOURAD;Initial Catalog=miniWebProject;Integrated Security=True;Encrypt=False"
+    //"Default": "Data Source=TAREK-MOURAD;Initial Catalog=miniWebProject;Integrated Security=True;Encrypt=False",
+    //"MainDatabase": "Data Source=TAREK-MOURAD;Initial Catalog=mainDatabase;Integrated Security=True;Encrypt=False",
+    //"Identity": "Data Source=TAREK-MOURAD;Initial Catalog=Identity;Integrated Security=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
