Fixed the injection of the car service

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"Default": "Data Source=TAREK-MOURAD;Initial Catalog=miniWebProject;Integrated Security=True;Encrypt=False",
+    "MainDatabase": "Data Source=.;Initial Catalog=mainDatabase;Integrated Security=True;Encrypt=False",
+    "Identity": "Data Source=.;Initial Catalog=Identity;Integrated Security=True;Encrypt=False"
+  }
 }
