Payment Service with Payment Transaction Service

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,6 +9,8 @@
   "ConnectionStrings": {
     //"Default": "Data Source=TAREK-MOURAD;Initial Catalog=miniWebProject;Integrated Security=True;Encrypt=False",
     "MainDatabase": "Data Source=.;Initial Catalog=mainDatabase;Integrated Security=True;Encrypt=False",
-    "Identity": "Data Source=.;Initial Catalog=Identity;Integrated Security=True;Encrypt=False"
+    "Identity": "Server=localhost,1433;Database=IdentityDB;User Id=sa;Password=YourPassword123!;TrustServerCertificate=True;",
+    "DBTourismAgencyContainer": "Server=localhost,1433;Database=AppDB;User Id=sa;Password=YourPassword123!;TrustServerCertificate=True;"
+
   }
 }
