--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -34,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\TourAgencyDb\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
